--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -65,34 +65,29 @@
 
         <section class="team-section">
             <h2>Meet Our Team</h2>
-            <div class="employee-grid">
-            
-                    <figure class="employee">
-                        <img src="../wwr/images/image60.jpg" alt="Mr, frank">
-                        <figcaption>
-                            <strong>Mr,Frank</strong><br>
-                            Lead Guide & Safety Coordinator<br>
-                            <em>"Safety first, fun always!"</em>
-                        </figcaption>
-                    </figure>
-                    <figure class="employee">
-                        <img src="../wwr/images/image61.jpg" alt="Kalungi Isaac, Senior Guide">
-                        <figcaption>
-                            <strong>Kalungi Isaac</strong><br>
-                            Senior Guide & Equipment Manager<br>
-                            <em>"Every rapids tells a story!"</em>
-                        </figcaption>
-                    </figure>
-                    <figure class="employee">
-                        <img src="../wwr/images/renah.png" alt="Renah manager">
-                        <figcaption>
-                            <strong>Renah Khan</strong><br>
-                            Customer Service Manager<br>
-                            <em>"Your adventure starts with us!"</em>
-                        </figcaption>
-                    </figure>
-            
+           <div class="team">
+                <div class="team-card lead-guide">
+                    <img src="../wwr/images/image60.jpg" alt="Mr. Frank">
+                    <h3 class="name">Mr,Frank</h3>
+                    <p class="role">Lead Guide & Safety Coordinator</p>
+                    <p class="quote">"Safety first, fun always!"</p>
+                </div>
+
+                <div class="team-card senior-guide">
+                    <img src="../wwr/images/image61.jpg" alt="Kalungi Isaac">
+                    <h3 class="name">Kalungi Isaac</h3>
+                    <p class="role">Senior Guide & Equipment Manager</p>
+                    <p class="quote">"Every rapids tells a story!"</p>
+                </div>
+
+                <div class="team-card customer-service">
+                    <img src="../wwr/images/renah.png" alt="Renah Khan">
+                    <h3 class="name">Renah Khan</h3>
+                    <p class="role">Customer Service Manager</p>
+                    <p class="quote">"Your adventure starts with us!"</p>
+                </div>
             </div>
+
         </section>
 
         <section class="contact-form-section">
