--- a/wwr/index.html
+++ b/wwr/index.html
@@ -61,7 +61,7 @@
                 <p>Immerse yourself in breathtaking landscapes as you navigate through pristine waters and untouched wilderness.</p>
             </div>
             <div class="feature">
-                <img src="../wwr/images/safety-icon.png" alt="Safety First">
+                <img src="../wwr/images/safty-first.png" alt="Safety First">
                 <h3>Safety First</h3>
                 <p>Our experienced guides and top-notch equipment ensure your adventure is as safe as it is exciting.</p>
             </div>
