--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -36,8 +36,8 @@
             </div>
         </section>
          <section class=".cta-section">
-            <h1>Our Rafting Adventures</h1>
-            <p>Experience the thrill of white water rafting with our expertly guided trips</p>
+            <h1 class="boom">Our Rafting Adventures</h1>
+            <p class="boom">Experience the thrill of white water rafting with our expertly guided trips</p>
         </section>
 
         <section class="team-section">
