--- a/wwr/index.html
+++ b/wwr/index.html
@@ -25,7 +25,7 @@
     
     <main>
         <div class="hero">
-            <img src="/wwr/images/zeroraft.png" alt="White Water Rafting Adventure" class="hero-img">
+            <img src="../wwr/images/zeroraft.png" alt="White Water Rafting Adventure" class="hero-img">
             <div class="hero-overlay">
                 <h1>Adventure Awaits You!</h1>
                 <p>Experience the Thrill of White Water Rafting</p>
