--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Kalungi Isaac">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="stylesheet">
     <link rel="stylesheet" href="../styles/rafting.css">
 </head>
 
@@ -45,7 +45,7 @@
             
             <div class="employee-grid">
                 <figure class="employee">
-                    <img src="../wwr/images/familyrafting.png" alt="Family enjoying a gentle rafting trip">
+                    <img src="../wwr/images/family-rafter.jpg" alt="Family enjoying a gentle rafting trip">
                     <figcaption>
                         <strong>Family Float Adventure</strong><br>
                         <span class="difficulty">Difficulty: Beginner (Class I-II)</span><br>
